--- a/lab6_helm_chart_version2_final/chart/guestbook/charts/frontend/templates/ingress.yaml
+++ b/lab6_helm_chart_version2_final/chart/guestbook/charts/frontend/templates/ingress.yaml
@@ -1,20 +1,20 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: guestbook-ingress
 spec:
   rules:
-  - host: frontend.minikube.local
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: frontend
-          servicePort: 80
-  - host: backend.minikube.local
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: backend
-          servicePort: 80
+    - host: frontend.minikube.local
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: frontend
+              servicePort: 80
+    - host: backend.minikube.local
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: backend
+              servicePort: 80
