--- a/lab11_helm_repository_final/chart/guestbook/Chart.yaml
+++ b/lab11_helm_repository_final/chart/guestbook/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: guestbook
-appVersion: "2.0"
-description: A Helm chart for Guestbook 2.0 
+appVersion: '2.0'
+description: A Helm chart for Guestbook 2.0
 version: 1.2.2
 type: application
 
@@ -14,7 +14,4 @@ dependencies:
     repository: http://localhost:8080
   - name: mongodb
     version: 7.8.x
-    repository: https://kubernetes-charts.storage.googleapis.com
-
-
-
+    repository: https://charts.helm.sh/stable
